Major code changes
.htaccess - file now accepts up to 4 parameters in the URL
.admin.php - restructured pages view to account for sub-pages
- class.config.php - moved table prefix
- class.modules.php rewrite to add more controlling features to module installing
- common.php - Now checks if the "events" module is loaded. Module to be added.
conf.json - nothing really.
functions.php - restructured generate_parent_select to allow selection of sub-pages.
sidebar.html - Now displays sub-pages and parent pages when viewing static pages.
edit-user/settings.html - update to templating system now uses == rather than EQUALS

Overall summary:
- New feature: Allows sub-pages of 3 levels deep and shows the full hierarchy in the address bar.

--- a/.htaccess
+++ b/.htaccess
@@ -77,3 +77,7 @@ RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$
 RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/.+$
 RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
 RewriteRule ^([^/\.]+)/([^/\.]+)/([^/\.]+)/?$ /index.php?mode=$1&act=$2&i=$3 [L]
+RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$
+RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/.+$
+RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
+RewriteRule ^([^/\.]+)/([^/\.]+)/([^/\.]+)/([^/\.]+)/?$ /index.php?mode=$1&act=$2&i=$3&p=$4 [L]
